--- a/src/views/partials/auth-footer.ejs
+++ b/src/views/partials/auth-footer.ejs
@@ -33,6 +33,21 @@
     </div>
   </footer>
 
+  <div style="position: fixed; bottom: 20px; right: 20px; transform: scale(0.7);">
+    <script type="text/javascript" src="https://cdnjs.buymeacoffee.com/1.0.0/button.prod.min.js" 
+        data-name="bmc-button" 
+        data-slug="thangnpq" 
+        data-color="#40DCA5" 
+        data-emoji="☕" 
+        data-font="Comic" 
+        data-text="Support me"
+        data-outline-color="#000000" 
+        data-font-color="#ffffff" 
+        data-coffee-color="#FFDD00"
+        data-size="small">
+    </script>
+  </div>
+
   <!-- Bootstrap JS Bundle with Popper -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   
