--- a/src/views/auth/register.ejs
+++ b/src/views/auth/register.ejs
@@ -35,7 +35,7 @@
               </div>
             <% } %>
 
-            <form id="registerForm" class="needs-validation" novalidate>
+            <form id="registerForm" action="/auth/register" method="POST" class="needs-validation" novalidate>
               <div class="mb-4">
                 <label for="username" class="form-label">Username</label>
                 <div class="input-group">
